--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
       <h1 class="mt-5">OMG! You will not believe this but...</h1>
       <h1 id="excuse" class="mt-5">My dog ate my homework</h1>
       <button id="btn" class="mt-5">Generate New Excuse</button>
+      <div>
+        <img src="" class="img-thumbnail w-25 mt-5" id="image" />
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
