--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
-    <title>CDK HTML5 Form</title>
+    <title>Christa's Excuse Generator</title>
   </head>
   <body>
     <div class="container-fluid text-center">
