added what images

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,19 @@
       <h1 class="mt-5">OMG! You will not believe this but...</h1>
       <h1 id="excuse" class="mt-5">My dog ate my homework</h1>
       <button id="btn" class="mt-5">Generate New Excuse</button>
-      <div>
-        <img src="" class="img-thumbnail w-25 mt-5" id="image" />
+      <div class="row d-flex align-items-center">
+        <div class="col-3"></div>
+        <div class="col-3">
+          <div class="card border border-0">
+            <img src="" class="img-thumbnail mt-5" id="whoimage" />
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="card border border-0">
+            <img src="" class="img-thumbnail mt-5" id="whatimage" />
+          </div>
+        </div>
+        <div class="col-3"></div>
       </div>
     </div>
     <script
