made suggested changes from class

--- a/src/index.html
+++ b/src/index.html
@@ -20,12 +20,20 @@
         <div class="col-3"></div>
         <div class="col-3">
           <div class="card border border-0">
-            <img src="" class="img-thumbnail mt-5" id="whoimage" />
+            <img
+              src="https://www.princeton.edu/sites/default/files/styles/1x_full_2x_half_crop/public/images/2022/02/KOA_Nassau_2697x1517.jpg?itok=Bg2K7j7J"
+              class="img-thumbnail mt-5"
+              id="whoimage"
+            />
           </div>
         </div>
         <div class="col-3">
           <div class="card border border-0">
-            <img src="" class="img-thumbnail mt-5" id="whatimage" />
+            <img
+              src="https://upload.wikimedia.org/wikipedia/commons/1/15/Homework_-_vector_maths.jpg"
+              class="img-thumbnail mt-5"
+              id="whatimage"
+            />
           </div>
         </div>
         <div class="col-3"></div>
